--- a/app/views/strategies/index.html.erb
+++ b/app/views/strategies/index.html.erb
@@ -10,6 +10,8 @@
   <%= button_to "New Strategy", new_strategy_path, method: :get, class: "btn btn-primary" %>
 
   <%= button_to "Rating page", rating_strategies_path, method: :get, class: "btn btn-primary" %>
+
+  <%= link_to "Calculate figures combination", select_date_puzzles_path, class: "btn btn-primary" %>
 </div>
 
 <%= form_with url: competitions_path, method: :post, data: { turbo: false } do %>
